Added AngularJS and updated a bunch of other things

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Chess Game</title>
   </head>
-  <body></body>
+  <body ng-app="app"><div ui-view></div></body>
 </html>
