Added additional checks and polished UI... a little

--- a/javascript/src/index.html
+++ b/javascript/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Chess Game</title>
+    <link rel="shortcut icon" href="./images/favicon.ico">
   </head>
   <body ng-app="app"><div ui-view></div></body>
 </html>
